--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="fa">
 <head>
   <meta charset="UTF-8">
-  <title>Base64 HTML Runner</title>
+  <title>ارسال عکس پیام ناشناس</title>
 </head>
 <body>
   <script>
